commenting out legacy code

--- a/processes/project-initiation/making-subdirectories_2022-09-27.qmd
+++ b/processes/project-initiation/making-subdirectories_2022-09-27.qmd
@@ -22,21 +22,21 @@ dir.create(ico)
 
 ```{r readFile}
 
-com_name_path <- here("data", "inputs", "com-names.txt")
-
-com_names <- readLines(com_name_path)
-
-com_names_lower <- str_to_lower(com_names)
-
-com_names_amper <- str_replace(com_names_lower, "&","")
-
-com_names_char <- str_replace(com_names_amper, "-", "")
-
-com_names_spaces <- str_replace(com_names_char, " ", "-")
-
-com_names_gaps <- str_replace(com_names_spaces, " ", "")
-
-# str_replace_all(com_names_lower)
+# com_name_path <- here("data", "inputs", "com-names.txt")
+# 
+# com_names <- readLines(com_name_path)
+# 
+# com_names_lower <- str_to_lower(com_names)
+# 
+# com_names_amper <- str_replace(com_names_lower, "&","")
+# 
+# com_names_char <- str_replace(com_names_amper, "-", "")
+# 
+# com_names_spaces <- str_replace(com_names_char, " ", "-")
+# 
+# com_names_gaps <- str_replace(com_names_spaces, " ", "")
+# 
+# # str_replace_all(com_names_lower)
 
 ```
 
