adjusting naming behaviour

--- a/processes/02_data-formatting/01_make-excel-extract-function_2022-10-04.qmd
+++ b/processes/02_data-formatting/01_make-excel-extract-function_2022-10-04.qmd
@@ -84,7 +84,7 @@ excel_extract <- function(
         ) #tryCatch
       }) # map2
     
-  names(listOut) <- janitor::make_clean_names(names(listOut))
+  names(listOut) <- prefixes
   
   listOut
 
