--- a/processes/02_data-formatting/02_make-census-data-tables_2022-10-05.qmd
+++ b/processes/02_data-formatting/02_make-census-data-tables_2022-10-05.qmd
@@ -18,6 +18,7 @@ library(readxl)
 library(fs) # check this actually gets used - I'd like to try it
 library(stringr)
 library(purrr)
+library(readr)
 ```
 
 ## Read data using excel_extract()
@@ -52,7 +53,7 @@ paths <- list(
 ### List excel files
 
 ```{r listExcels}
-excels <- lapply(paths, dir, full.names = TRUE)
+excels <- lapply(paths, dir, full.names = TRUE, pattern = "\\.xlsx")
 ```
 
 ### Convert lists to vectors and name
@@ -61,8 +62,9 @@ Currently, `excels` is a 3-length list of vectors. The simplest way to run `exce
 
 ```{r convertListsToVectors}
 listify_files <- function(x){
-  list_names <- 
-    str_remove(x, ".xlsx") |>
+  list_names <-
+    str_extract(x, "(?<=/)[^/]+(?=$)") |> #final file name
+    str_remove(".xlsx") |>
     str_replace_all("&", "and") |> 
     str_remove_all("[:punct:]") |> 
     str_squish() |> 
@@ -82,7 +84,53 @@ walk(excels,show)
 
 ### Read excel files
 
-```{r readExcels}
+It's *probably* best to do this one directory at at a time, since there are only 3 directories and each one might want slightly different arguments. NB this code block takes maybe like 15/20 minutes to run.
 
-lapply(excels[["nations"]], excel_extract)
+```{r readExcels}
+#| cache: true
+census_tables <- lapply(excels, lapply, excel_extract,
+                        tabs = c(
+                          1, "Ethnicity", "Religion", "Health", "Household type"
+                        ),
+                        numberise = TRUE)
+```
+
+## Write CSVs
+
+### Create directories
+
+```{r createDirs}
+dir_create(unlist(paths), "csvs")
+
+walk2(
+  census_tables,
+  paths,
+  function(table_list, path){
+    path <- path(path, "csvs")
+    
+    location_names <- as.list(names(table_list))
+    
+    walk2(table_list, location_names,
+          
+      function(location, location_name){
+        
+        sub_dir <- dir_create(path, location_name)
+        
+        stat_names <- as.list(names(location))
+        
+        walk2(location, stat_names,
+              
+              function(stat, stats_name){
+                write_csv(
+                  stat,
+                  str_c(
+                    sub_dir,
+                    str_c(
+                      location_name, "-", stats_name, ".csv"
+                      ),
+                    sep = "/"
+                  ))})
+      })
+  })
+    
 ```
