--- a/processes/02_data-formatting/02_make-census-data-tables_2022-10-05.qmd
+++ b/processes/02_data-formatting/02_make-census-data-tables_2022-10-05.qmd
@@ -114,7 +114,7 @@ census_tables <- lapply(excels, lapply, excel_extract,
 # create nations/dioceses/com directories
 dir_create(unlist(paths), "csvs")
 
-## TOP LEVEL ## (com, nations, dioceses)
+## TOP LEVEL ## (com, nations, dioceses)                                    
 ## For each level, save tables by location ::::::::::::::::::::::::::::::::::
 save_location_tables <- function(locations, this_path){
   
@@ -128,7 +128,9 @@ save_location_tables <- function(locations, this_path){
         .f = save_each_table, # defined below
           
         directory = this_path 
-        )}
+  )}
+#::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+
 
 ## NEST LEVEL 1 ## (england, scotland... // <<dioceses idk>> // blackburn, sligo...)
 ## For each location, save all tables (one per statistic) ::::::::::::::::::
@@ -145,10 +147,12 @@ save_each_table <-
           
           location  = location_name,
           directory = save_path
-          )}
+    )}
+#:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
+
 
 ## NEST LEVEL 2 ## (health, ethnicity, population ...)
-## For each table, save the table :::::::::::::::::::::::::::::::::::::::::::
+## For each table, save the table ::::::::::::::::::::::::::::::::::::::::::::
 save_table <-
   function(stat_table, stat_name,
            location, directory){
@@ -158,9 +162,10 @@ save_table <-
 
     write_csv(stat, save_path)
   }
+#:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 
 
-## EXECUTE ##
-walk2(census_tables, paths, )
-    
+## EXECUTE ###################################################################
+walk2(census_tables, paths, )                                               #|
+##############################################################################
 ```
