--- a/processes/02_data-formatting/02_make-census-data-tables_2022-10-05.qmd
+++ b/processes/02_data-formatting/02_make-census-data-tables_2022-10-05.qmd
@@ -114,8 +114,15 @@ census_tables <- lapply(excels, lapply, excel_extract,
 # create nations/dioceses/com directories
 dir_create(unlist(paths), "csvs")
 
+## EXPLANATION ##############################################################
+## Create a function for each level of the list. Top two functions          #
+## are wrappers that call purrr::walk() on the layer below, bottom function #
+## is a wrapper for vroom::vroom() that saves each table                    #
+#############################################################################
+
 ## TOP LEVEL ## (com, nations, dioceses)                                    
 ## For each level, save tables by location ::::::::::::::::::::::::::::::::::
+
 save_location_tables <- function(locations, this_path){
   
   location_names <- as.list(names(locations))
@@ -129,11 +136,13 @@ save_location_tables <- function(locations, this_path){
           
         directory = this_path 
   )}
+
 #::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 
 
 ## NEST LEVEL 1 ## (england, scotland... // <<dioceses idk>> // blackburn, sligo...)
-## For each location, save all tables (one per statistic) ::::::::::::::::::
+## For each location, save all tables (one per statistic) :::::::::::::::::::
+
 save_each_table <- 
   function(location_tables, location_name, directory){
     
@@ -148,11 +157,13 @@ save_each_table <-
           location  = location_name,
           directory = save_path
     )}
+
 #:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 
 
 ## NEST LEVEL 2 ## (health, ethnicity, population ...)
 ## For each table, save the table ::::::::::::::::::::::::::::::::::::::::::::
+
 save_table <-
   function(stat_table, stat_name,
            location, directory){
@@ -162,10 +173,11 @@ save_table <-
 
     write_csv(stat, save_path)
   }
+
 #:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
 
 
 ## EXECUTE ###################################################################
-walk2(census_tables, paths, )                                               #|
+walk2(census_tables, paths, save_location_tables)                            #
 ##############################################################################
 ```
